--- a/package.json
+++ b/package.json
@@ -6,11 +6,15 @@
   "author": "Seung Wook Lee <seungwooklee94@gmail.com>",
   "license": "MIT",
   "dependencies": {
+    "@babel/core": "^7.6.0",
+    "@babel/node": "^7.6.1",
+    "@babel/preset-env": "^7.6.0",
     "babel-node": "^0.0.1-security",
-    "graphql-yoga": "^1.18.3"
+    "dotenv": "^8.1.0",
+    "graphql-yoga": "^1.18.3",
+    "morgan": "^1.9.1"
   },
   "devDependencies": {
-    "babel-cli": "^6.26.0",
     "nodemon": "^1.19.2"
   },
   "scripts": {
