--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "@babel/preset-env": "^7.6.0",
     "babel-node": "^0.0.1-security",
     "dotenv": "^8.1.0",
+    "graphql-tools": "^4.0.5",
     "graphql-yoga": "^1.18.3",
+    "merge-graphql-schemas": "^1.7.0",
     "morgan": "^1.9.1"
   },
   "devDependencies": {
