--- a/package.json
+++ b/package.json
@@ -14,13 +14,16 @@
     "graphql-tools": "^4.0.5",
     "graphql-yoga": "^1.18.3",
     "merge-graphql-schemas": "^1.7.0",
-    "morgan": "^1.9.1"
+    "morgan": "^1.9.1",
+    "prisma-client-lib": "^1.34.8"
   },
   "devDependencies": {
     "nodemon": "^1.19.2"
   },
   "scripts": {
     "deploy": "prisma deploy",
-    "dev": "nodemon --exec babel-node src/server.js"
+    "dev": "nodemon --exec babel-node src/server.js",
+    "generate": "prisma generate",
+    "prisma": "yarn run deploy && yarn run generate"
   }
 }
